--- a/jellybeans/templates/base.html
+++ b/jellybeans/templates/base.html
@@ -1,3 +1,5 @@
+<!-- Trevor Shumway 2/13/24 -->
+<!-- Base HTML that all other templates inherit from. Includes CSS imports + other head items, navbar, and footer -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -8,15 +10,16 @@
     <link rel="icon" type="image/x-icon" href="https://trevorshumway.com/images/tlsfavicon.ico">
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
-    <!-- Option 1: Include in HTML -->
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="{% static 'css/customStyles.css' %}">
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid">
-          <!-- Left-aligned brand, larger font -->
+          <!-- Left-aligned brand -->
           <a class="navbar-brand fs-3" href="{% url 'jellybeans' %}">BYU Jelly Beans</a>
   
           <!-- Navbar toggler for mobile -->
@@ -90,6 +93,7 @@
   crossorigin="anonymous"
 ></script>
 
+<!-- JavaScript function for confirming "DELETE". Called by DELETE button in jellybeans.html -->
 <script>
   function confirmDelete(name) {
       return confirm(`Are you sure you want to delete "${name}"? This action cannot be undone.`);
