--- a/jellybeans/templates/createFlavor.html
+++ b/jellybeans/templates/createFlavor.html
@@ -1,3 +1,4 @@
+<!-- Trevor Shumway 2/13/24 -->
 {% extends "base.html" %}
 {% block title %}Add New Jelly Bean Flavor{% endblock %}
 
@@ -7,24 +8,29 @@
 
     <div class="row justify-content-center">
         <div class="col-md-6">
+            <!-- HTML form for creating -->
             <form method="POST">
                 {% csrf_token %}
                 
+                <!-- Flavor Name -->
                 <div class="mb-3">
                     <label for="name" class="form-label">Flavor Name</label>
                     <input type="text" class="form-control" id="name" name="name" required>
                 </div>
 
+                <!-- Flavor Description -->
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
                 </div>
 
+                <!-- Flavor Photo URL -->
                 <div class="mb-3">
                     <label for="photoUrl" class="form-label">Photo URL</label>
                     <input type="url" class="form-control" id="photoUrl" name="photoUrl" required>
                 </div>
 
+                <!-- Buttons -->
                 <div class="text-center">
                     <button type="submit" class="btn btn-success">Add Flavor</button>
                     <a href="{% url 'jellybeans' %}" class="btn btn-dark">Cancel</a>
@@ -32,6 +38,7 @@
             </form>
         </div>
     </div>
+    <!-- Line breaks to push the footer down -->
     <br>
     <br>
     <br>
