added tech stack to about page

--- a/jellybeans/templates/about.html
+++ b/jellybeans/templates/about.html
@@ -7,7 +7,7 @@
     <!-- Page Title -->
     <div class="text-center mb-4">
         <h2 class="fw-bold">About This Project</h2>
-        <p class="text-muted">A simple CRUD app built for the final interview for the Software Developer role at the BYU Harold B. Lee Library.</p>
+        <p class="text-muted">A simple CRUD app built for the final interview for the Software Developer role at the BYU Harold B. Lee Library. Built with Python Django, deployed on AWS Elastic Beanstalk and PostgreSQL RDS.</p>
     </div>
 
     <!-- Content Section -->
